tests/error/undefined/def.bas
 1 REM function undefined
10 LET X = 1
20 PRINT FN TEST(X)
30 END